--- a/tailwind/package.json
+++ b/tailwind/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.87",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "axios": "^1.6.8",
     "babel-preset-react": "^6.24.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
