--- a/company-management-frontend/package.json
+++ b/company-management-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwand-learn",
+  "name": "company-management-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,10 +18,8 @@
     "@types/react-dom": "^18.2.21",
     "axios": "^1.6.8",
     "babel-preset-react": "^6.24.1",
-    "dayjs": "1.10.4",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
-    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
@@ -32,7 +30,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=3000 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,6 +54,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   }
 }
