--- a/training-eng/package.json
+++ b/training-eng/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^22.7.7",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "docxtemplater": "^3.51.2",
     "html-react-parser": "^5.1.18",
+    "jszip": "^3.10.1",
+    "mammoth": "^1.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.10",
