--- a/learn-english/package.json
+++ b/learn-english/package.json
@@ -15,6 +15,7 @@
     "html-react-parser": "^5.1.18",
     "mammoth": "^1.8.0",
     "react": "^18.3.1",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
