--- a/learn-english/package.json
+++ b/learn-english/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "docxtemplater": "^3.51.2",
     "firebase": "^11.0.1",
     "html-react-parser": "^5.1.18",
@@ -17,6 +18,7 @@
     "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
