--- a/learn-english/package.json
+++ b/learn-english/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
+    "buffer-equal-constant-time": "^1.0.1",
     "docxtemplater": "^3.51.2",
     "firebase": "^11.0.1",
+    "googleapis": "^144.0.0",
     "html-react-parser": "^5.1.18",
     "mammoth": "^1.8.0",
     "react": "^18.3.1",
